results/print-ir/expected/failure/parser/unopened_list.psy.out
error: syntax error, unexpected ",", expecting ;
  --> tests/failure/parser/unopened_list.psy:2:24
   |
  2|     var list[3] ls = 1, 2, 3];
   |                        ^--- Here

